--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewmodel_version"
     kapt "androidx.lifecycle:lifecycle-compiler:$viewmodel_version"
 
+    // Kodein
+    def kodein_version = "6.4.0"
+    implementation "org.kodein.di:kodein-di-generic-jvm:$kodein_version"
+    implementation "org.kodein.di:kodein-di-framework-android-x:$kodein_version"
 }
